Seu Zé Empreendimentos 0.10.5 beta

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
                             </div>
                                     <nav id="menu" style="margin-bottom: 50px;">
                                         <ul>
-                                            <li><a href="#Plano" target="_self">PLANO</a></li>
+                                            <li><a href="#Plano">PLANO</a></li>
+                                            <li><a href="#Sobre_nos">SOBRE NÓS</a></li>
                                             <li><a href="#Submeta-se">SUBMETA-SE</a></li>
                                             <li><a href="#Contatos">CONTATOS</a></li>
-                                            <li><a href="#Sobre_nos">SOBRE NÓS</a></li>
+                                            
                                         </ul>
                 </section>
                                     </nav>
